v1.0.5 | Поддержка 1.20.1 — 26.1 без пробелов
Добавлены ветки 1.20.1, 1.20.2, 1.20.3-1.20.4, 1.21.2-1.21.3, 1.21.5,
1.21.9-1.21.10; 1.20.6 расширена на 1.20.5.

Версионные различия вынесены в Compat: лор предмета читается через
компонентный API с 1.20.5 и через NBT ниже, скорборд — через DisplaySlot
с 1.20.2 и PlayerScoreEntry с 1.20.3.

Java 21 API убран из кода: ветки до 1.20.5 компилируются под Java 17.
Минимальная версия лоадера у каждой ветки взята из её Fabric API.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>